--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p class="text-3xl font-bold text-white">Core Expertise</p>
                 <div class="mt-5 flex gap-4 justify-center flex-wrap">
                     <div class="bg-white p-2 rounded-md skill-icon-w flex justify-center items-center" style="">
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="text-center" class="w-full self-center">
+                        <a href="https://acquaintsoft.com/services/tailwindcss-frontend" target="_blank" rel="noopener noreferrer" class="text-center" class="w-full self-center">
                             <img src="/svg/front-end/tailwind-50.svg" class="tech-icon">
                         </a>
                     </div>
@@ -56,7 +56,7 @@
                 <p class="text-3xl font-bold text-white">Also Work With</p>
                 <div class="mt-5 flex gap-4 justify-center flex-wrap">
                     <div class="bg-white p-2 rounded-md skill-icon-w flex justify-center items-center" style="">
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="text-center" class="w-full self-center">
+                        <a href="https://acquaintsoft.com/services/html5-app-development-for-web-and-mobile" target="_blank" rel="noopener noreferrer" class="text-center" class="w-full self-center">
                             <img src="/svg/front-end/html-50.svg" class="tech-icon">
                         </a>
                     </div>
@@ -67,7 +67,7 @@
                     </div>
                     <div class="bg-white p-2 rounded-md skill-icon-w flex justify-center items-center" style="">
                         <a href="#" target="_blank" rel="noopener noreferrer" class="text-center" class="w-full self-center">
-                            <img src="/home/front-end/ui-ux.svg" class="tech-icon">
+                            <img src="/svg/front-end/ui-ux.svg" class="tech-icon">
                         </a>
                     </div>
                 </div>
